k8s/ws-gateway/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ws-gateway
  labels:
    app: ws-gateway
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ws-gateway
  template:
    metadata:
      labels:
        app: ws-gateway
    spec:
      containers:
      - name: ws-gateway
        image: vincentramaputra/viscord-ws-gateway:sha-5d924f4
        ports:
        - containerPort: 80
          name: http
