k8s/ws-gateway/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ws-gateway
  labels:
    app: ws-gateway
spec:
  selector:
    app: ws-gateway
  ports:
  - protocol: TCP
    port: 80
    targetPort: http
